fix for "max" not setting visual width on Firefox

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
 
 .box {
 	margin-top: 1em;
+	width: 3em;
 }
 
 .left, .left * {
